@@ -102,4 +102,36 @@ public class Foo{
 }
      ]]></code>
     </test-code>
+    <test-code>
+        <description><![CDATA[
+false positive bug #2002722
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+public class Foo {
+  void bar() {
+    String dtdColumnNames[] = null;
+    String sortedDtdColumns[] = null;
+    final int loop = 0;
+    dtdColumnNames[loop] = dtdColumnNames[loop].trim ( );
+    sortedDtdColumns[loop] = sortedDtdColumns[loop].trim ( );
+  }
+}
+     ]]></code>
+    </test-code>
+    <test-code>
+        <description><![CDATA[
+false positive bug #2002722, different bug in comment section
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+public class Foo {
+  void bar2() {
+    String foo ="foo";
+    foo = mangleTheInput(foo);
+  }
+  String mangleTheInput(final String s) { return s;}
+}
+     ]]></code>
+    </test-code>
 </test-data>
